# agent-chat-sse-fastapi-01

./: .env.example  .gitignore  README.md  agent-chat.code-workspace  docker-compose.yml  human_in_the_loop.md
agent-service/: Dockerfile  README.md  pyproject.toml  sql_app.db
agent-service/app/: agents.py  main.py  routes.py  schemas.py  tools.py
agent-service/app/core/: config.py  connections.py  logger.py  mcp.py
agent-service/app/db/: crud.py  database.py  deps.py  models.py
backend/: Dockerfile  README.md  pyproject.toml  sql_app.db
backend/app/: main.py
backend/app/api/: products.py  sales.py
backend/app/core/: config.py
backend/app/db/: crud.py  database.py  deps.py  models.py  schemas.py
docs/: architecture.md  database_setup_guide.md
docs/skills/: fastapi_skill.md  mui_skill.md  react_skill.md  sse_skill.md
frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Chat.tsx  ThreadSidebar.tsx
frontend/src/config/: appConfig.ts
frontend/src/hooks/: useSSEChat.ts
mcp/: Dockerfile  README.md  pyproject.toml  server.py
